{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 85,
  "lineage": "44099660-80de-8b1c-a172-2a65946f101c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [
                  "inspector-gadget--gi0tnho.thankfulsea-e17c8a00.westeurope.azurecontainerapps.io"
                ],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-address-pool",
                "ip_addresses": [],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backend-http-settings-https",
                "name": "backend-http-settings-https",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/probes/http-health-probe",
                "probe_name": "http-health-probe",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip-configuration",
                "name": "frontend-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port-http",
                "name": "frontend-port-http",
                "port": 80
              },
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port-https",
                "name": "frontend-port-https",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/appgateway-ip-configuration",
                "name": "appgateway-ip-configuration",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip-configuration",
                "frontend_ip_configuration_name": "frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port-http",
                "frontend_port_name": "frontend-port-http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/listener-http",
                "name": "listener-http",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/frontend-ip-configuration",
                "frontend_ip_configuration_name": "frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/frontend-port-https",
                "frontend_port_name": "frontend-port-https",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/listener-https",
                "name": "listener-https",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/sslCertificates/azureapp01.com",
                "ssl_certificate_name": "azureapp01.com",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.ManagedIdentity/userAssignedIdentities/identity-appgw"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "westeurope",
            "name": "appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/probes/http-health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "http-health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/redirectConfigurations/redirect-configuration",
                "include_path": true,
                "include_query_string": true,
                "name": "redirect-configuration",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/listener-https",
                "target_listener_name": "listener-https",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/listener-http",
                "http_listener_name": "listener-http",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/request-routing-rule-http",
                "name": "request-routing-rule-http",
                "priority": 1,
                "redirect_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/redirectConfigurations/redirect-configuration",
                "redirect_configuration_name": "redirect-configuration",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/backend-http-settings-https",
                "backend_http_settings_name": "backend-http-settings-https",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/listener-https",
                "http_listener_name": "listener-https",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/request-routing-rule-https",
                "name": "request-routing-rule-https",
                "priority": 2,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-containerapps-internal-appgw",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway/sslCertificates/azureapp01.com",
                "key_vault_secret_id": "https://kv-appgw-pbtb9.vault.azure.net/secrets/generated-cert/e323f0a0e3fc47408b2cf5ab4a0a6940",
                "name": "azureapp01.com",
                "password": "",
                "public_cert_data": ""
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "dependencies": [
            "azurerm_container_app.app",
            "azurerm_container_app_environment.env",
            "azurerm_key_vault.keyvault",
            "azurerm_key_vault_certificate.local_domain_certs",
            "azurerm_public_ip.pip-appgateway",
            "azurerm_resource_group.rg",
            "azurerm_role_assignment.role-certificates-officer",
            "azurerm_subnet.subnet-appgw",
            "azurerm_subnet.subnet-container-apps",
            "azurerm_user_assigned_identity.identity-appgw",
            "azurerm_virtual_network.vnet",
            "data.azurerm_client_config.current",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway-private10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 2,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [
                  "inspector-gadget--gi0tnho.thankfulsea-e17c8a00.westeurope.azurecontainerapps.io"
                ],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/backendAddressPools/backend-address-pool",
                "ip_addresses": [],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/backendHttpSettingsCollection/backend-http-settings-https",
                "name": "backend-http-settings-https",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/probes/http-health-probe",
                "probe_name": "http-health-probe",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendIPConfigurations/frontend-ip-configuration",
                "name": "frontend-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway10",
                "subnet_id": ""
              },
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendIPConfigurations/frontend-private-ip-configuration",
                "name": "frontend-private-ip-configuration",
                "private_ip_address": "10.0.1.110",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendPorts/frontend-port-http",
                "name": "frontend-port-http",
                "port": 80
              },
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendPorts/frontend-port-https",
                "name": "frontend-port-https",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/gatewayIPConfigurations/appgateway-ip-configuration",
                "name": "appgateway-ip-configuration",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendIPConfigurations/frontend-ip-configuration",
                "frontend_ip_configuration_name": "frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendPorts/frontend-port-http",
                "frontend_port_name": "frontend-port-http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/httpListeners/listener-http",
                "name": "listener-http",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendIPConfigurations/frontend-ip-configuration",
                "frontend_ip_configuration_name": "frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/frontendPorts/frontend-port-https",
                "frontend_port_name": "frontend-port-https",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/httpListeners/listener-https",
                "name": "listener-https",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/sslCertificates/azureapp01.com",
                "ssl_certificate_name": "azureapp01.com",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.ManagedIdentity/userAssignedIdentities/identity-appgw"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "westeurope",
            "name": "appgateway-private10",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/probes/http-health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "http-health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/redirectConfigurations/redirect-configuration",
                "include_path": true,
                "include_query_string": true,
                "name": "redirect-configuration",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/httpListeners/listener-https",
                "target_listener_name": "listener-https",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/httpListeners/listener-http",
                "http_listener_name": "listener-http",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/requestRoutingRules/request-routing-rule-http",
                "name": "request-routing-rule-http",
                "priority": 1,
                "redirect_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/redirectConfigurations/redirect-configuration",
                "redirect_configuration_name": "redirect-configuration",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/backendHttpSettingsCollection/backend-http-settings-https",
                "backend_http_settings_name": "backend-http-settings-https",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/httpListeners/listener-https",
                "http_listener_name": "listener-https",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/requestRoutingRules/request-routing-rule-https",
                "name": "request-routing-rule-https",
                "priority": 2,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-containerapps-internal-appgw",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private10/sslCertificates/azureapp01.com",
                "key_vault_secret_id": "https://kv-appgw-pbtb9.vault.azure.net/secrets/generated-cert/e323f0a0e3fc47408b2cf5ab4a0a6940",
                "name": "azureapp01.com",
                "password": "",
                "public_cert_data": ""
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "dependencies": [
            "azurerm_container_app.app",
            "azurerm_container_app_environment.env",
            "azurerm_key_vault.keyvault",
            "azurerm_key_vault_certificate.local_domain_certs",
            "azurerm_public_ip.pip-appgateway10",
            "azurerm_resource_group.rg",
            "azurerm_role_assignment.role-certificates-officer",
            "azurerm_subnet.subnet-appgw",
            "azurerm_subnet.subnet-container-apps",
            "azurerm_user_assigned_identity.identity-appgw",
            "azurerm_virtual_network.vnet",
            "data.azurerm_client_config.current",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway-private6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 2,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [
                  "inspector-gadget--gi0tnho.thankfulsea-e17c8a00.westeurope.azurecontainerapps.io"
                ],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/backendAddressPools/backend-address-pool",
                "ip_addresses": [],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/backendHttpSettingsCollection/backend-http-settings-https",
                "name": "backend-http-settings-https",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/probes/http-health-probe",
                "probe_name": "http-health-probe",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendIPConfigurations/frontend-ip-configuration",
                "name": "frontend-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway6",
                "subnet_id": ""
              },
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendIPConfigurations/frontend-private-ip-configuration",
                "name": "frontend-private-ip-configuration",
                "private_ip_address": "10.0.1.16",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendPorts/frontend-port-http",
                "name": "frontend-port-http",
                "port": 80
              },
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendPorts/frontend-port-https",
                "name": "frontend-port-https",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/gatewayIPConfigurations/appgateway-ip-configuration",
                "name": "appgateway-ip-configuration",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendIPConfigurations/frontend-ip-configuration",
                "frontend_ip_configuration_name": "frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendPorts/frontend-port-http",
                "frontend_port_name": "frontend-port-http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/httpListeners/listener-http",
                "name": "listener-http",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendIPConfigurations/frontend-ip-configuration",
                "frontend_ip_configuration_name": "frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/frontendPorts/frontend-port-https",
                "frontend_port_name": "frontend-port-https",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/httpListeners/listener-https",
                "name": "listener-https",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/sslCertificates/azureapp01.com",
                "ssl_certificate_name": "azureapp01.com",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.ManagedIdentity/userAssignedIdentities/identity-appgw"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "westeurope",
            "name": "appgateway-private6",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/probes/http-health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "http-health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/redirectConfigurations/redirect-configuration",
                "include_path": true,
                "include_query_string": true,
                "name": "redirect-configuration",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/httpListeners/listener-https",
                "target_listener_name": "listener-https",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/httpListeners/listener-http",
                "http_listener_name": "listener-http",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/requestRoutingRules/request-routing-rule-http",
                "name": "request-routing-rule-http",
                "priority": 1,
                "redirect_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/redirectConfigurations/redirect-configuration",
                "redirect_configuration_name": "redirect-configuration",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/backendHttpSettingsCollection/backend-http-settings-https",
                "backend_http_settings_name": "backend-http-settings-https",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/httpListeners/listener-https",
                "http_listener_name": "listener-https",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/requestRoutingRules/request-routing-rule-https",
                "name": "request-routing-rule-https",
                "priority": 2,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-containerapps-internal-appgw",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/appgateway-private6/sslCertificates/azureapp01.com",
                "key_vault_secret_id": "https://kv-appgw-pbtb9.vault.azure.net/secrets/generated-cert/e323f0a0e3fc47408b2cf5ab4a0a6940",
                "name": "azureapp01.com",
                "password": "",
                "public_cert_data": ""
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "dependencies": [
            "azurerm_container_app.app",
            "azurerm_container_app_environment.env",
            "azurerm_key_vault.keyvault",
            "azurerm_key_vault_certificate.local_domain_certs",
            "azurerm_public_ip.pip-appgateway6",
            "azurerm_resource_group.rg",
            "azurerm_role_assignment.role-certificates-officer",
            "azurerm_subnet.subnet-appgw",
            "azurerm_subnet.subnet-container-apps",
            "azurerm_user_assigned_identity.identity-appgw",
            "azurerm_virtual_network.vnet",
            "data.azurerm_client_config.current",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 4,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/backendAddressPools/backend-address-pool",
                "ip_addresses": [],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/backendHttpSettingsCollection/devvnet-be-htst",
                "name": "devvnet-be-htst",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/frontendIPConfigurations/devvnet-public-feip",
                "name": "devvnet-public-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/example-pip",
                "subnet_id": ""
              },
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/frontendIPConfigurations/devvnet-private-feip",
                "name": "devvnet-private-feip",
                "private_ip_address": "10.0.1.20",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/frontendPorts/devvnet-feport",
                "name": "devvnet-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/frontendIPConfigurations/devvnet-private-feip",
                "frontend_ip_configuration_name": "devvnet-private-feip",
                "frontend_port_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/frontendPorts/devvnet-feport",
                "frontend_port_name": "devvnet-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/httpListeners/devvnet-httplstn",
                "name": "devvnet-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway",
            "identity": [],
            "location": "westeurope",
            "name": "example-appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/backendHttpSettingsCollection/devvnet-be-htst",
                "backend_http_settings_name": "devvnet-be-htst",
                "http_listener_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/httpListeners/devvnet-httplstn",
                "http_listener_name": "devvnet-httplstn",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/applicationGateways/example-appgateway/requestRoutingRules/devvnet-rqrt",
                "name": "devvnet-rqrt",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-containerapps-internal-appgw",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.example",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-appgw",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/networkInterfaces/nic-vm-windows",
            "internal_domain_name_suffix": "wlkbzu3c2boexj4wvgm4f5b0lg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-jumpbox"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AA-80-83",
            "name": "nic-vm-windows",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-containerapps-internal-appgw",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Compute/virtualMachines/vm-windows-w11"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-jumpbox",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/example-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.93.14.142",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "example-pip",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.251.248",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-appgateway",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-appgateway10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway10",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.211.33.127",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-appgateway10",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-appgateway6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway6",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.80.14.219",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-appgateway6",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-appgateway8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway8",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.68.214.100",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-appgateway8",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-appgateway9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-appgateway9",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.64.65",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-appgateway9",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.251.175",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw",
            "name": "subnet-appgw",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-containerapps-internal-appgw",
            "virtual_network_name": "vnet-internal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-containerapps-internal-appgw",
            "virtual_network_name": "vnet-internal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-container-apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/27"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-container-apps",
            "name": "subnet-container-apps",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-containerapps-internal-appgw",
            "virtual_network_name": "vnet-internal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-jumpbox",
            "name": "subnet-jumpbox",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-containerapps-internal-appgw",
            "virtual_network_name": "vnet-internal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d31cd4b2-e0a2-4b5c-a7d6-a999e2fc3a5e",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal",
            "location": "westeurope",
            "name": "vnet-internal",
            "resource_group_name": "rg-containerapps-internal-appgw",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-container-apps",
                "name": "subnet-container-apps"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-appgw",
                "name": "subnet-appgw"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/subnet-jumpbox",
                "name": "subnet-jumpbox"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-containerapps-internal-appgw/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}